# wxEDID

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
cb_project/: wxEDID.cbp
cb_project/wxsmith/: wxEDID_frame.wxs
m4/: build_switch.m4  rcd_autoconf.m4
man/: wxedid.1
src/: CEA.h  CEA_EXT.h  CEA_EXT_class.cpp  CEA_EXT_class.h  CEA_class.cpp  CEA_class.h  EDID.h  EDID_class.cpp  EDID_class.h  EDID_shared.h  debug.h  def_types.h  grpar.cpp  grpar.h  guilog.cpp  guilog.h  rcdunits.h  svd_vidfmt.h  wxEDID_App.cpp  wxEDID_App.h  wxEDID_Main.cpp  wxEDID_Main.h  wxedid.rcdgen_cfg
src/rcode/: README_rcd_autogen  rcd_autogen  rcd_fn.tmp.c  rcd_fn_bm.tmp.c  rcd_scp.tmp.c  rcd_scp.tmp.h  rcd_scp_dm.tmp.c  rcode.h  rcode_scp.h
